--- a/app/src/main/res/layout/app_bar_assistent_interface.xml
+++ b/app/src/main/res/layout/app_bar_assistent_interface.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".INTERFACE_ADMINISTRATOR">
+    tools:context=".ASSISTENT_INTERFACE">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -20,7 +20,7 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include layout="@layout/content_interface_administrator" />
+    <include layout="@layout/content_assistent_interface" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
