--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,8 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:onClick="loginLayoutTapped"
     tools:context=".LoginActivity">
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="278dp"
+        android:layout_height="203dp"
+        android:layout_marginTop="48dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/FHJ_Logo" />
 
     <EditText
         android:id="@+id/edtLoginPassword"
@@ -14,7 +24,6 @@
         android:ems="10"
         android:hint="Please enter a Password"
         android:inputType="textPassword"
-        android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="@+id/edtLoginEmail"
         app:layout_constraintStart_toStartOf="@+id/edtLoginEmail"
         app:layout_constraintTop_toBottomOf="@+id/edtLoginEmail" />
@@ -23,55 +32,28 @@
         android:id="@+id/edtLoginEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="Please enter an Email"
         android:inputType="textPersonName"
-        android:minHeight="48dp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView3"
-        app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintStart_toStartOf="@+id/imageView3"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintHorizontal_bias="0.514"
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <Button
         android:id="@+id/btnLoginActivity"
-        android:layout_width="94dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="32dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="Log In"
-        app:layout_constraintEnd_toEndOf="@+id/edtLoginPassword"
-        app:layout_constraintHorizontal_bias="0.482"
-        app:layout_constraintStart_toStartOf="@+id/edtLoginPassword"
-        app:layout_constraintTop_toBottomOf="@+id/edtLoginPassword" />
+        tools:layout_editor_absoluteX="150dp"
+        tools:layout_editor_absoluteY="380dp" />
 
     <Button
         android:id="@+id/btnSignUpLoginActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sign Up"
-        app:layout_constraintEnd_toEndOf="@+id/edtLoginPassword"
-        app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintStart_toStartOf="@+id/edtLoginPassword"
-        app:layout_constraintTop_toBottomOf="@+id/btnLoginActivity" />
-
-    <Button
-        android:id="@+id/btnStudent_toInterface"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
-        android:text="Interface Login"
-        app:layout_constraintEnd_toEndOf="@+id/btnSignUpLoginActivity"
-        app:layout_constraintHorizontal_bias="0.486"
-        app:layout_constraintStart_toStartOf="@+id/btnSignUpLoginActivity"
-        app:layout_constraintTop_toBottomOf="@+id/btnSignUpLoginActivity" />
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="341dp"
-        android:layout_height="216dp"
-        android:layout_marginTop="56dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/student_login" />
+        tools:layout_editor_absoluteX="150dp"
+        tools:layout_editor_absoluteY="432dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
