--- a/app/src/main/res/layout/activity_administrator_login.xml
+++ b/app/src/main/res/layout/activity_administrator_login.xml
@@ -6,18 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".Admin.AdministratorLogin">
 
-    <ImageView
-        android:id="@+id/imageView8"
-        android:layout_width="222dp"
-        android:layout_height="192dp"
-        android:layout_marginTop="68dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/joanneum"
-        tools:srcCompat="@tools:sample/avatars" />
-
     <Button
         android:id="@+id/btnAdminSignUp"
         android:layout_width="wrap_content"
@@ -55,15 +43,15 @@
         android:id="@+id/edtAdminEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="56dp"
         android:ems="10"
         android:hint="Please enter an Email"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView8"
-        app:layout_constraintHorizontal_bias="0.583"
-        app:layout_constraintStart_toStartOf="@+id/imageView8"
-        app:layout_constraintTop_toBottomOf="@+id/imageView8" />
+        app:layout_constraintEnd_toEndOf="@+id/imageView6"
+        app:layout_constraintHorizontal_bias="0.487"
+        app:layout_constraintStart_toStartOf="@+id/imageView6"
+        app:layout_constraintTop_toBottomOf="@+id/imageView6" />
 
     <Button
         android:id="@+id/btnAdmin_toInterface"
@@ -75,5 +63,16 @@
         app:layout_constraintHorizontal_bias="0.472"
         app:layout_constraintStart_toStartOf="@+id/btnAdminSignUp"
         app:layout_constraintTop_toBottomOf="@+id/btnAdminSignUp" />
+
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="112dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:srcCompat="@tools:sample/avatars" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
