--- a/app/src/main/res/layout/activity_administrator_login.xml
+++ b/app/src/main/res/layout/activity_administrator_login.xml
@@ -66,13 +66,13 @@
 
     <ImageView
         android:id="@+id/imageView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="112dp"
+        android:layout_width="333dp"
+        android:layout_height="220dp"
+        android:layout_marginTop="52dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:srcCompat="@drawable/admin_login" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
