--- a/app/src/main/res/layout/activity_interface_student.xml
+++ b/app/src/main/res/layout/activity_interface_student.xml
@@ -10,9 +10,10 @@
       android:id="@+id/btnProject"
       android:layout_width="130dp"
       android:layout_height="60dp"
-      android:layout_marginTop="84dp"
+      android:layout_marginTop="68dp"
       android:text="Projekt"
       app:layout_constraintEnd_toEndOf="@+id/imageView7"
+      app:layout_constraintHorizontal_bias="0.497"
       app:layout_constraintStart_toStartOf="@+id/imageView7"
       app:layout_constraintTop_toBottomOf="@+id/imageView7" />
 
@@ -39,13 +40,14 @@
 
   <ImageView
       android:id="@+id/imageView7"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="120dp"
+      android:layout_width="357dp"
+      android:layout_height="236dp"
+      android:layout_marginTop="60dp"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.498"
+      app:layout_constraintHorizontal_bias="0.493"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      tools:src="@tools:sample/avatars" />
+      tools:src="@tools:sample/avatars"
+      tools:srcCompat="@drawable/student_interface" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
