--- a/app/src/main/res/layout/activity_administrator_login.xml
+++ b/app/src/main/res/layout/activity_administrator_login.xml
@@ -43,15 +43,17 @@
         android:id="@+id/edtAdminEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="48dp"
         android:ems="10"
         android:hint="Please enter an Email"
         android:inputType="textPersonName"
         android:minHeight="48dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/imageView6"
-        app:layout_constraintHorizontal_bias="0.487"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="@+id/imageView6"
-        app:layout_constraintTop_toBottomOf="@+id/imageView6" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView6"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/btnAdmin_toInterface"
@@ -66,13 +68,14 @@
 
     <ImageView
         android:id="@+id/imageView6"
-        android:layout_width="333dp"
-        android:layout_height="220dp"
-        android:layout_marginTop="52dp"
+        android:layout_width="0dp"
+        android:layout_height="258dp "
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@drawable/admin_login" />
+        app:layout_constraintVertical_bias="0.088"
+        app:srcCompat="@drawable/admin_login" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
