--- a/app/src/main/res/layout/activity_interface_student.xml
+++ b/app/src/main/res/layout/activity_interface_student.xml
@@ -10,10 +10,10 @@
       android:id="@+id/btnProject"
       android:layout_width="130dp"
       android:layout_height="60dp"
-      android:layout_marginTop="68dp"
+      android:layout_marginTop="36dp"
       android:text="Projekt"
       app:layout_constraintEnd_toEndOf="@+id/imageView7"
-      app:layout_constraintHorizontal_bias="0.497"
+      app:layout_constraintHorizontal_bias="0.502"
       app:layout_constraintStart_toStartOf="@+id/imageView7"
       app:layout_constraintTop_toBottomOf="@+id/imageView7" />
 
@@ -40,14 +40,13 @@
 
   <ImageView
       android:id="@+id/imageView7"
-      android:layout_width="357dp"
-      android:layout_height="236dp"
-      android:layout_marginTop="60dp"
+      android:layout_width="400dp"
+      android:layout_height="297dp"
+      android:layout_marginTop="28dp"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.493"
+      app:layout_constraintHorizontal_bias="0.454"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      tools:src="@tools:sample/avatars"
-      tools:srcCompat="@drawable/student_interface" />
+      app:srcCompat="@drawable/student_interface" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
