--- a/app/src/main/res/layout/activity_professor_login.xml
+++ b/app/src/main/res/layout/activity_professor_login.xml
@@ -10,13 +10,12 @@
         android:id="@+id/edtProfEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="48dp"
         android:ems="10"
         android:hint="Please enter an Email"
         android:inputType="textPersonName"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="@+id/imageView5"
-        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="@+id/imageView5"
         app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
@@ -69,13 +68,12 @@
 
     <ImageView
         android:id="@+id/imageView5"
-        android:layout_width="392dp"
-        android:layout_height="289dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="409dp"
+        android:layout_height="294dp"
+        android:layout_marginTop="28dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.473"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@drawable/professor_login" />
+        app:srcCompat="@drawable/professor_login" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
