--- a/app/src/main/res/layout/activity_interface_assistent.xml
+++ b/app/src/main/res/layout/activity_interface_assistent.xml
@@ -19,11 +19,11 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView7" />
 
     <Button
-        android:id="@+id/btnBachelor"
+        android:id="@+id/changeSlot"
         android:layout_width="130dp"
         android:layout_height="60dp"
         android:layout_marginTop="112dp"
-        android:text="Bachelor"
+        android:text="Change slot"
         app:layout_constraintEnd_toEndOf="@+id/Assigned_Students"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/Assigned_Students"
