--- a/app/src/main/res/layout/activity_interface_student.xml
+++ b/app/src/main/res/layout/activity_interface_student.xml
@@ -18,7 +18,7 @@
       app:layout_constraintTop_toBottomOf="@+id/imageView7" />
 
   <Button
-      android:id="@+id/btnBachelor"
+      android:id="@+id/changeSlot"
       android:layout_width="130dp"
       android:layout_height="60dp"
       android:layout_marginTop="64dp"
@@ -34,9 +34,9 @@
       android:layout_height="60dp"
       android:layout_marginTop="68dp"
       android:text="Master"
-      app:layout_constraintEnd_toEndOf="@+id/btnBachelor"
-      app:layout_constraintStart_toStartOf="@+id/btnBachelor"
-      app:layout_constraintTop_toBottomOf="@+id/btnBachelor" />
+      app:layout_constraintEnd_toEndOf="@+id/changeSlot"
+      app:layout_constraintStart_toStartOf="@+id/changeSlot"
+      app:layout_constraintTop_toBottomOf="@+id/changeSlot" />
 
   <ImageView
       android:id="@+id/imageView7"
