--- a/app/src/main/res/layout/activity_interface_assistent.xml
+++ b/app/src/main/res/layout/activity_interface_assistent.xml
@@ -9,23 +9,24 @@
 
     <Button
         android:id="@+id/Assigned_Students"
-        android:layout_width="130dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="352dp"
+        android:layout_width="wrap_content"
+        android:layout_height="90dp"
+        android:layout_marginTop="292dp"
         android:text="Assigned Students"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.546"
+        app:layout_constraintHorizontal_bias="0.482"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView10" />
 
     <ImageView
         android:id="@+id/imageView10"
-        android:layout_width="670dp"
-        android:layout_height="455dp"
-        android:layout_marginBottom="668dp"
+        android:layout_width="748dp"
+        android:layout_height="492dp"
+        android:layout_marginBottom="760dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.764"
+        app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/assistant_interface" />
 
