--- a/app/src/main/res/layout/activity_admin_interface2.xml
+++ b/app/src/main/res/layout/activity_admin_interface2.xml
@@ -33,7 +33,7 @@
         android:layout_width="0dp"
         android:layout_height="80dp"
         android:layout_marginTop="28dp"
-        android:text="Delete Work"
+        android:text="Change User"
         app:layout_constraintEnd_toEndOf="@+id/btn_Delete_User"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/btn_Delete_User"
